Edited listArticles, listPeople and newPerson.Changed img path in newArticle.

--- a/src/main/webapp/admin/newArticle.xhtml
+++ b/src/main/webapp/admin/newArticle.xhtml
@@ -17,7 +17,7 @@
 
         <header>
             <hgroup id="top">              
-                <h1><img id="logo" src="img/hialsBilde.jpg" alt="hials bilde" width="120" heigth="150"/>HiALS</h1>
+                <h1><img id="logo" src="../img/hialsBilde.jpg" alt="hials bilde" width="120" heigth="150"/>HiALS</h1>
                 <h2></h2>
             </hgroup>
         </header>
