--- a/src/main/webapp/listArticles.xhtml
+++ b/src/main/webapp/listArticles.xhtml
@@ -27,6 +27,8 @@
                     </p:column>
                 </p:dataTable>          
             </p:fieldset>
+            <p:commandButton value="Home" action="index?faces-redirect=true"/>
+            <p:commandButton value="New article" action="/admin/newArticle?faces-redirect=true"/>
         </h:form>
     </ui:define>
 </ui:composition>
