--- a/src/main/webapp/admin/editCourse.xhtml
+++ b/src/main/webapp/admin/editCourse.xhtml
@@ -189,7 +189,7 @@
                         </p:column> 
                         <p:column>
                             <p:commandButton value="Add Video" action="#{courseController.addVideo()}" update="videoTable"/>
-                            <p:commandButton value="Add Existing Video (NYI)" action="#{courseController.addVideo()}" update="videoTable"/>
+                            <p:commandButton value="Add Existing Video (NYI)" outcome="editCourse"/>
                         </p:column>
                     </p:fieldset>
                 </div>
