--- a/src/main/webapp/admin/newArticle.xhtml
+++ b/src/main/webapp/admin/newArticle.xhtml
@@ -7,8 +7,8 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
     <h:head>
-        <link rel="stylesheet" href="../css/news/html5reset.css" type="text/css" /> 
-        <link rel="stylesheet" href="../css/news/style.css" type="text/css" /> 
+        <link rel="stylesheet" href="css/news/html5reset.css" type="text/css" /> 
+        <link rel="stylesheet" href="css/news/style.css" type="text/css" /> 
         <title>HiALS nyheter</title>
     </h:head>
     <h:body>
@@ -17,7 +17,7 @@
 
         <header>
             <hgroup id="top">              
-                <h1><img id="logo" src="../img/hialsBilde.jpg" alt="hials bilde" width="120" heigth="150"/>HiALS</h1>
+                <h1><img id="logo" src="img/hialsBilde.jpg" alt="hials bilde" width="120" heigth="150"/>HiALS</h1>
                 <h2></h2>
             </hgroup>
         </header>
