--- a/src/main/webapp/template.xhtml
+++ b/src/main/webapp/template.xhtml
@@ -4,7 +4,7 @@
       xmlns:ui="http://java.sun.com/jsf/facelets">
     <h:head>
         <title>Muldvarp</title>
-        <link rel="stylesheet" type="text/css" href="/muldvarp/css/css.css" />
+        <h:outputStylesheet name="css.css" library="css"/>
         <ui:insert name="extrascript" />
     </h:head>
     <h:body>        
