--- a/src/main/webapp/admin/newArticle.xhtml
+++ b/src/main/webapp/admin/newArticle.xhtml
@@ -7,8 +7,8 @@
       xmlns:f="http://java.sun.com/jsf/core">
 
     <h:head>
-        <link rel="stylesheet" href="css/news/html5reset.css" type="text/css" /> 
-        <link rel="stylesheet" href="css/news/style.css" type="text/css" /> 
+        <link rel="stylesheet" href="resources/css/news/html5reset.css" type="text/css" /> 
+        <link rel="stylesheet" href="resources/css/news/style.css" type="text/css" /> 
         <title>HiALS nyheter</title>
     </h:head>
     <h:body>
