--- a/src/main/webapp/menu.xhtml
+++ b/src/main/webapp/menu.xhtml
@@ -3,25 +3,23 @@
     xmlns:h="http://java.sun.com/jsf/html"
     xmlns:ui="http://java.sun.com/jsf/facelets"
     xmlns:p="http://primefaces.org/ui">
-<h:form>
-
-
-    <ul>
-
-        <li><a href="http://eapp-ub.uials.no/muldvarp/resources/programme">Programme REST</a></li>
-        <li><a href="http://eapp-ub.uials.no/muldvarp/resources/course">Course REST</a></li>
-        <li><a href="http://eapp-ub.uials.no/muldvarp/resources/video">Video REST</a></li>
-        <li><a href="http://eapp-ub.uials.no/muldvarp/resources/Library">Library REST</a></li>
-        <li><a href="http://eapp-ub.uials.no/muldvarp/resources/person">Person REST</a></li>
-        <li><a href="/muldvarp/faces/admin/listCourses.xhtml">CourseList</a></li>
-        <li><a href="/muldvarp/faces/admin/listProgramme.xhtml">ProgrammeList</a></li>
-        <li><a href="/muldvarp/faces/admin/listVideos.xhtml">VideoList</a></li>
-        <li><a href="/muldvarp/faces/admin/newArticle.xhtml">New Article</a></li>
-        <li><a href="/muldvarp/faces/admin/newVideo.xhtml">New Video</a></li>
-        <li><a href="/muldvarp/faces/listDocuments.xhtml">Documents</a></li>
-        <li><a href="/muldvarp/faces/listPeople.xhtml">People</a></li>
-        <li><a href="/muldvarp/faces/listArticles.xhtml">Articles</a></li>
-        <li><a href="/muldvarp/faces/newPerson.xhtml">New Person</a></li>
-    </ul>
-</h:form>
+    <h:form>
+        <ul>
+            <li><a href="resources/programme">Programme REST</a></li>
+            <li><a href="resources/course">Course REST</a></li>
+            <li><a href="resources/video">Video REST</a></li>
+            <li><a href="resources/Library">Library REST</a></li>
+            <li><a href="resources/person">Person REST</a></li>
+            <li><a href="resources/article/news/">News Articles REST</a></li>
+            <li><a href="admin/listCourses.xhtml">CourseList</a></li>
+            <li><a href="admin/listProgramme.xhtml">ProgrammeList</a></li>
+            <li><a href="admin/listVideos.xhtml">VideoList</a></li>
+            <li><a href="admin/newArticle.xhtml">New Article</a></li>
+            <li><a href="admin/newVideo.xhtml">New Video</a></li>
+            <li><a href="listDocuments.xhtml">Documents</a></li>
+            <li><a href="listPeople.xhtml">People</a></li>
+            <li><a href="listArticles.xhtml">Articles</a></li>
+            <li><a href="newPerson.xhtml">New Person</a></li>
+        </ul>
+    </h:form>
 </ui:composition>
