--- a/src/main/webapp/news.xhtml
+++ b/src/main/webapp/news.xhtml
@@ -1,17 +1,14 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://java.sun.com/jsf/core"
       xmlns:c="http://java.sun.com/jsp/jstl/core">
 
     <h:head>  
         <link rel="stylesheet" type="text/css" 
-              href="css/news/androidNews.css" media="only screen and (max-width: 480px)" />
+              href="resources/css/news/androidNews.css" media="only screen and (max-width: 480px)" />
         <link rel="stylesheet" type="text/css" 
-              href="css/news/desktopNews.css" media="screen and (min-width: 481px)" />
+              href="resources/css/news/desktopNews.css" media="screen and (min-width: 481px)" />
         <!--[if IE]>
         <link rel="stylesheet" type="text/css" href="explorer.css" media="all" />
         <![endif]-->
