--- a/src/main/webapp/article.xhtml
+++ b/src/main/webapp/article.xhtml
@@ -1,12 +1,7 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:h="http://java.sun.com/jsf/html"
-      xmlns:p="http://primefaces.org/ui"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:c="http://java.sun.com/jsp/jstl/core">
-
+      xmlns:h="http://java.sun.com/jsf/html">
     <h:head>  
         <link rel="stylesheet" type="text/css" 
               href="css/news/androidNews.css" media="only screen and (max-width: 480px)" />
@@ -20,9 +15,9 @@
     
     <h:body>
         <div id="content">
-            <h1 style="text-align: center;">#{articleController.oldArticle.title}</h1>
+            <h1 style="text-align: center;"><h:outputText value="#{articleController.oldArticle.title}" escape="false"/></h1>
                 <p>
-                    #{articleController.oldArticle.text}
+                    <h:outputText value="#{articleController.oldArticle.text}" escape="false"/>
                 </p>
             </div>
     </h:body>
