Masked some NPE's

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -29,6 +29,10 @@
             <h:outputLabel value="Videos"/>
             <h:outputLabel value="Courses"/>
         </p:panelGrid>
+
+        <br/><br/>
+        <p>
+            <a href="Muldvarp-debug.apk">Android App</a>
+        </p>
     </ui:define>
-    
 </ui:composition>
