--- a/src/main/webapp/menu.xhtml
+++ b/src/main/webapp/menu.xhtml
@@ -5,21 +5,25 @@
     xmlns:p="http://primefaces.org/ui">
     <h:form>
         <ul>
-            <li><a href="resources/programme">Programme REST</a></li>
-            <li><a href="resources/course">Course REST</a></li>
-            <li><a href="resources/video">Video REST</a></li>
-            <li><a href="resources/Library">Library REST</a></li>
-            <li><a href="resources/person">Person REST</a></li>
-            <li><a href="resources/article/news/">News Articles REST</a></li>
-            <li><a href="admin/listCourses.xhtml">CourseList</a></li>
-            <li><a href="admin/listProgramme.xhtml">ProgrammeList</a></li>
-            <li><a href="admin/listVideos.xhtml">VideoList</a></li>
-            <li><a href="admin/newArticle.xhtml">New Article</a></li>
-            <li><a href="admin/newVideo.xhtml">New Video</a></li>
-            <li><a href="listDocuments.xhtml">Documents</a></li>
-            <li><a href="listPeople.xhtml">People</a></li>
-            <li><a href="listArticles.xhtml">Articles</a></li>
-            <li><a href="newPerson.xhtml">New Person</a></li>
+            <li><h:outputLink value="services/programme">REST Program</h:outputLink></li>
+            <li><h:button outcome="/services/programme" value="REST Program"/></li>
+            <li><h:outputLink value="services/course">Course REST</h:outputLink></li>
+            <li><h:outputLink value="services/video">Video REST</h:outputLink></li>
+            <li><h:outputLink value="services/Library">Library REST</h:outputLink></li>
+            <li><h:outputLink value="services/person">Person REST</h:outputLink></li>
+            <li><h:outputLink value="services/article/news/">News Articles REST</h:outputLink></li>
+        </ul>
+        <br/>
+        <ul>
+            <li><h:link outcome="/admin/listCourses.xhtml">CourseList</h:link></li>
+            <li><h:link outcome="/admin/listProgramme.xhtml">Program</h:link></li>
+            <li><h:link outcome="/admin/listVideos.xhtml">VideoList</h:link></li>
+            <li><h:link outcome="/admin/newArticle.xhtml">New Article</h:link></li>
+            <li><h:link outcome="/admin/newVideo.xhtml">New Video</h:link></li>
+            <li><h:link outcome="/listDocuments.xhtml">Documents</h:link></li>
+            <li><h:link outcome="/listPeople.xhtml">People</h:link></li>
+            <li><h:link outcome="/listArticles.xhtml">Articles</h:link></li>
+            <li><h:link outcome="/newPerson.xhtml">New Person</h:link></li>
         </ul>
     </h:form>
 </ui:composition>
