--- a/src/main/webapp/admin/editCourse.xhtml
+++ b/src/main/webapp/admin/editCourse.xhtml
@@ -1,4 +1,4 @@
-<ui:composition template="/template.xhtml"
+<ui:composition template="/templates/layout.xhtml"
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:f="http://java.sun.com/jsf/core"
     xmlns:p="http://primefaces.org/ui"
@@ -189,7 +189,7 @@
                         </p:column> 
                         <p:column>
                             <p:commandButton value="Add Video" action="#{courseController.addVideo()}" update="videoTable"/>
-                            <p:commandButton value="Add Existing Video (NYI)" outcome="editCourse"/>
+                            <p:commandButton value="Add Existing Video (NYI)" action="editCourse"/>
                         </p:column>
                     </p:fieldset>
                 </div>
