--- a/src/main/webapp/admin/editQuestion.xhtml
+++ b/src/main/webapp/admin/editQuestion.xhtml
@@ -1,4 +1,4 @@
-<ui:composition template="/template.xhtml"
+<ui:composition template="/templates/layout.xhtml"
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:f="http://java.sun.com/jsf/core"
     xmlns:p="http://primefaces.org/ui"
