--- a/src/main/webapp/listArticles.xhtml
+++ b/src/main/webapp/listArticles.xhtml
@@ -1,4 +1,4 @@
-<ui:composition template="/template.xhtml"
+<ui:composition template="/templates/layout.xhtml"
         xmlns:f="http://java.sun.com/jsf/core"
         xmlns:p="http://primefaces.org/ui"
         xmlns:h="http://java.sun.com/jsf/html"
