Moved templates to templates folder

--- a/src/main/webapp/index.xhtml
+++ b/src/main/webapp/index.xhtml
@@ -32,7 +32,7 @@
 
         <br/><br/>
         <p>
-            <a href="Muldvarp-debug.apk">Android App</a>
+            <a href="Muldvarp-debug.apk">Install Android App</a>
         </p>
     </ui:define>
 </ui:composition>
